--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         </header>
         <main>
             
+                <div id="button">
+                    <button id="add-task">Add Task</button>
+                    <button id="add-section">Add Section</button>
+                </div>
+            
         </main>
     </body>
 </html>
