--- a/index.html
+++ b/index.html
@@ -25,9 +25,57 @@
                 <!-- todolist section -->
                 <div id="todolist">
                     <ul>
-                        <li class="main-point"><strong>New Task</strong></li>
-                        <li class="main-point"><strong>Today</strong></li>
-                        <li class="main-point"><strong>Upcoming</strong></li>
+                        <li class="main-point">
+                            <strong>&#9660;New Task</strong>
+                            <ul class="sub-list">
+                                <li>
+                                    <span class="check">&check;</span>
+                                    Quarterly Newsletter
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="main-point">
+                            <strong>&#9660;Today</strong>
+                            <ul class="sub-list">
+                                <li>
+                                    <span class="check">&check;</span>
+                                    Recruiting blog post
+                                </li>
+                                <li>
+                                    <span class="check">&check;</span>
+                                    Mobile app luaunch
+                                </li>
+                                <li>
+                                    <span class="cross">&cross;</span>
+                                    Interview John H.
+                                </li>
+                                <li>
+                                    <span class="check">&check;</span>
+                                    Summit update to mobiile storefronts
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="main-point">
+                            <strong>&#9660;Upcoming</strong>
+                            <ul class="sub-list">
+                                <li>
+                                    <span class="cross">&cross;</span>
+                                    Schedule meeting with Alex
+                                </li>
+                                <li>
+                                    <span class="check">&check;</span>
+                                    Homepage refresh
+                                </li>
+                                <li>
+                                    <span class="check">&check;</span>
+                                    Onboard new Sales team members
+                                </li>
+                                <li>
+                                    <span class="check">&check;</span>
+                                    Review editorial calendar
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
