--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                                 <li>
                                     <span class="check">&check;</span>
                                     Quarterly Newsletter
+                                    <span class="editorial">
+                                        Editorial
+                                    </span>
                                 </li>
                             </ul>
                         </li>
@@ -40,18 +43,30 @@
                                 <li>
                                     <span class="check">&check;</span>
                                     Recruiting blog post
+                                    <span class="editorial">
+                                        Editorial
+                                    </span>
                                 </li>
                                 <li>
                                     <span class="check">&check;</span>
                                     Mobile app luaunch
+                                    <span class="q1">
+                                        Q1 Goals
+                                    </span>
                                 </li>
                                 <li>
                                     <span class="cross">&cross;</span>
                                     Interview John H.
+                                    <span class="recuitring">
+                                        Recruitring
+                                    </span>
                                 </li>
                                 <li>
                                     <span class="check">&check;</span>
                                     Summit update to mobiile storefronts
+                                    <span class="mobile">
+                                        Mobile
+                                    </span>
                                 </li>
                             </ul>
                         </li>
@@ -65,14 +80,23 @@
                                 <li>
                                     <span class="check">&check;</span>
                                     Homepage refresh
+                                    <span class="website">
+                                        Website
+                                    </span>
                                 </li>
                                 <li>
                                     <span class="check">&check;</span>
                                     Onboard new Sales team members
+                                    <span class="sales">
+                                        Sales
+                                    </span>
                                 </li>
                                 <li>
                                     <span class="check">&check;</span>
                                     Review editorial calendar
+                                    <span class="editorial">
+                                        Editorial
+                                    </span>
                                 </li>
                             </ul>
                         </li>
